@@ -499,9 +499,12 @@ class UnicodeTest(
         )
 
         if not sys.platform.startswith('java'):
+            # Silence Py3k warning
+            with test_support.check_warnings():
+                buf = buffer('character buffers are decoded to unicode')
             self.assertEqual(
                 unicode(
-                    buffer('character buffers are decoded to unicode'),
+                    buf,
                     'utf-8',
                     'strict'
                 ),
